# numbridge

./: .gitignore  CLAUDE.md  README.md
Launcher/: Info.plist  Makefile  Package.swift
Launcher/Sources/NumBridgeLauncher/: App.swift  ServerManager.swift  StatusBarController.swift
server/: pyproject.toml
server/src/numbridge/: __main__.py  numbers_bridge.py  server.py
server/tests/: test_numbers_bridge.py
