[project]
name = "numbridge"
version = "0.1.0"
description = "MCP server bridging Claude to Apple Numbers via AppleScript"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/numbridge"]
